<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home_default"
        android:title="@string/bottom_navigation_home"/>

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/icon_discover_default"
        android:title="@string/bottom_navigation_discover"/>

    <item
        android:id="@+id/navigation_new_post"
        android:icon="@drawable/new_post"
        android:title="@string/bottom_navigation_new_post"/>

    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/icon_learn_default"
        android:title="@string/bottom_navigation_learn"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile_active"
        android:title="@string/bottom_navigation_profile"/>
</menu>